// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders in state INTRO 1`] = `
<div
  className="Game page"
>
  <Intro
    imageData={
      Array [
        Object {
          "height": 800,
          "id": 113063,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Sean_Astin_by_Gage_Skidmore.jpg/545px-Sean_Astin_by_Gage_Skidmore.jpg",
          "name": "Sean Astin",
          "width": 545,
        },
      ]
    }
  />
</div>
`;

exports[`renders in state MEMORIZE 1`] = `
<div
  className="Game page"
>
  <Memorize
    imageData={
      Array [
        Object {
          "height": 800,
          "id": 113063,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Sean_Astin_by_Gage_Skidmore.jpg/545px-Sean_Astin_by_Gage_Skidmore.jpg",
          "name": "Sean Astin",
          "width": 545,
        },
      ]
    }
  />
</div>
`;

exports[`renders in state RECALL 1`] = `
<div
  className="Game page"
>
  <Recall
    imageData={
      Array [
        Object {
          "height": 800,
          "id": 113063,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Sean_Astin_by_Gage_Skidmore.jpg/545px-Sean_Astin_by_Gage_Skidmore.jpg",
          "name": "Sean Astin",
          "width": 545,
        },
      ]
    }
  />
</div>
`;

exports[`renders in state RESULTS 1`] = `
<div
  className="Game page"
>
  <Results
    imageData={
      Array [
        Object {
          "height": 800,
          "id": 113063,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Sean_Astin_by_Gage_Skidmore.jpg/545px-Sean_Astin_by_Gage_Skidmore.jpg",
          "name": "Sean Astin",
          "width": 545,
        },
      ]
    }
  />
</div>
`;
